# ElectronScript

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.html  main.js  snippets.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: GlobalLogPanel.jsx  Titlebar.jsx
src/data/: config.js
src/hooks/: useLogs.jsx  useTauri.js
src/styles/: index.css
src/views/: AppManagementView.jsx  HomeView.jsx  ScriptLibraryView.jsx
