[package]
name = "electron-script"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
futures-util = "0.3.32"

[build-dependencies]
tauri-build = { version = "2", features = [] }
